fix banner sub title on smaller screens

--- a/src/js/views/home/banner.scss
+++ b/src/js/views/home/banner.scss
@@ -118,13 +118,20 @@ $home-image-xl: $bark-blurred-lg;
   vertical-align: middle;
   color: white;
   font-size: 20px;
-  width: 80px;
+  width: 50px;
+}
+
+.home__banner_sub_title td:nth-child(2) {
+  width: 10px;
+}
+.home__banner_sub_title td:nth-child(4) {
+  width: 10px;
 }
 
 @media screen and (min-width: 600px) {
-  // .home__banner_sub_title {
-  //   height: 150px;
-  // }
+  .home__banner_sub_title td {
+    width: 80px;
+  }
   .home__banner_sub_title table {
     width: 600px;
   }
